--- a/tailwind/login.html
+++ b/tailwind/login.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <link href="/your-path-to-uicons/css/uicons-[your-style].css" rel="stylesheet">  -->
+    <title>Login</title>
   </head>
   <body>
     <div class="bg-gray-200 w-full h-screen" >
