Updated login page styling

--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -34,11 +34,11 @@
                             <div class="card-body FormCardBody">
                                 <form>
                                     <div class="FormCardBodyGroup">
-                                      <label for="email" class="form-label">Email</label>
+                                      <label for="email" class="form-label FormCardBodyGroupTitle">E mail</label>
                                       <input type="email" class="form-control FormCardBodyGroupInput" id="email">
                                     </div>
                                     <div class="FormCardBodyGroup">
-                                      <label for="password" class="form-label">Password</label>
+                                      <label for="password" class="form-label FormCardBodyGroupTitle">Password</label>
                                       <input type="password" class="form-control FormCardBodyGroupInput" id="password">
                                     </div>
                                     <button type="submit" class="btn btn-secondary FormCardBodyGroupButton m-auto">Login</button>
