Leadattribute base structure added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="tailwind/login.html">Login</a>
     <h1>Bootstrap website</h1>
     <a href="bootstrap/login.html">Login</a>
+    <a href="bootstrap/leadstructure.html">Lead Structure</a>
 </body>
 </html>
