--- a/bootstrap/leadstructure.html
+++ b/bootstrap/leadstructure.html
@@ -8,13 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <!-- font-awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
 
@@ -32,41 +34,17 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="container-fluid">
-                                            <div class="row">
-                                                <div class="col-2">
-                                                    <span>Name</span>
-                                                </div>
-                                                <div class="col-2">
-                                                    <span>Slug</span>
-                                                </div>
-                                                <div class="col-2">
-                                                    <span>Attribute</span>
-                                                </div>
-                                                <div class="col-2">
-                                                    <span>Type</span>
-                                                </div>
-                                                <div class="col-2">
-                                                    <span>Value</span>
-                                                </div>
-                                                <div class="col-2">
-                                                    <span>Help Text</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <!-- Table  -->
-                                <table>
+                                <table class="table table-responsive-md table-responsive-sm ">
                                     <thead>
                                       <tr>
-                                        <th>Name</th>
-                                        <th>Slug</th>
-                                        <th>Attribute</th>
-                                        <th>Type</th>
-                                        <th>Help Text</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Slug</th>
+                                        <th scope="col">Attribute</th>
+                                        <th scope="col">Type</th>
+                                        <th scope="col">Value</th>
+                                        <th scope="col">Help Text</th>
+                                        <th></th>
                                       </tr>
                                     </thead>
                                     <tbody>
@@ -75,17 +53,25 @@
                                         <td>name</td>
                                         <td>String</td>
                                         <td>Main</td>
-                                        <td>Name of the student</td>
+                                        <td class="helpText">-</td>
+                                        <td class="helpText">Name of the customer</td>
+                                        <td>
+                                          <i class="fa-solid fa-trash d-flex align-items-center m-1"></i>
+                                        </td>
                                       </tr>
                                       <tr>
-                                        <td>Email</td>
-                                        <td>email</td>
-                                        <td>Email</td>
-                                        <td>Main</td>
-                                        <td>Email of the student</td>
+                                        <td>Status</td>
+                                        <td>status</td>
+                                        <td>Dropdown</td>
+                                        <td>Track</td>
+                                        <td class="helpText">In Progress, Completed</td>
+                                        <td class="helpText">Current status</td>
+                                        <td>
+                                          <i class="fa-solid fa-trash d-flex align-items-center m-1"></i>
+                                        </td>
                                       </tr>
                                     </tbody>
-                                </table>
+                                  </table>
                             </div>
                         </div>
                     </div>
