--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -8,13 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- font-awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
 
@@ -35,13 +36,22 @@
                                 <form>
                                     <div class="FormCardBodyGroup">
                                       <label for="email" class="form-label FormCardBodyGroupTitle">E mail</label>
-                                      <input type="email" class="form-control FormCardBodyGroupInput" id="email">
+                                      <div class="d-flex FormCardBodyGroupInput rounded">
+                                        <input type="email" class="form-control border-0" id="email">
+                                        <i class="fa-solid fa-envelope d-flex align-items-center m-1"></i>
+                                      </div>
+
                                     </div>
                                     <div class="FormCardBodyGroup">
                                       <label for="password" class="form-label FormCardBodyGroupTitle">Password</label>
-                                      <input type="password" class="form-control FormCardBodyGroupInput" id="password">
+                                      <div class="d-flex FormCardBodyGroupInput rounded">
+                                      <input type="password" class="form-control border-0" id="password">
+                                      <i class="fa-solid fa-eye d-flex align-items-center m-1"></i>
+                                    </div>
+                                     <h6 class="text-end">Forget Password</h6>
                                     </div>
                                     <button type="submit" class="btn btn-secondary FormCardBodyGroupButton m-auto">Login</button>
+                                    <p class="text-center">Don't have an account? Sing up</p>
                                   </form>
                             </div>
                         </div>
