Lead file added

--- a/bootstrap/lead.html
+++ b/bootstrap/lead.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Lead Structure</title>
+    <title>Lead</title>
   </head>
   <body>
 
@@ -33,13 +33,15 @@
                 <div class="main">
                     <div class="container-fluid">
                       <h2 class="mainTitle">
-                        Lead Structure
+                        Lead
                       </h2>
                       <div class="topBtn">
                         <button class="btn createBtn">
                           Create New
                         </button>
-                        <input type="text" placeholder="Search">
+                        <button class="btn createBtn">
+                            Filters
+                        </button>
                       </div>
                       <!-- Table  -->
                       <table class="table table-responsive-md table-responsive-sm ">
