--- a/ui-html/bootstrap/lead.html
+++ b/ui-html/bootstrap/lead.html
@@ -27,7 +27,30 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-2">
-                <div class="sidebar"></div>
+              <div class="container sidebar">
+                <div class="sidebarBody">
+                  <li>
+                    <a class="sidebarBodyA" href="#">
+                        Home
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sidebarBodyA" href="#">
+                      Structure
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sidebarBodyA" href="#">
+                      Report
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sidebarBodyA" href="#">
+                      Users
+                    </a>
+                  </li>
+                </div>
+              </div>
             </div>
             <div class="col-10">
                 <div class="main">
