--- a/ui-html/bootstrap/login.html
+++ b/ui-html/bootstrap/login.html
@@ -25,10 +25,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-6">
-                <!-- <h1>Login</h1> -->
-            </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 offset-6">
                 <div class="row">
                     <div class="col-10">
                         <div class="card FormCard">
@@ -52,7 +49,7 @@
                                     </div>
                                     <button type="submit" class="btn btn-secondary FormCardBodyGroupButton m-auto">Login</button>
                                     <p class="text-center">Don't have an account? Sing up</p>
-                                  </form>
+                                </form>
                             </div>
                         </div>
                     </div>
