Added logout and updated leadstructure

--- a/ui-html/bootstrap/leadstructure.html
+++ b/ui-html/bootstrap/leadstructure.html
@@ -59,11 +59,18 @@
                         Lead Structure
                       </h2>
                       <div class="topBtn">
-                        <button class="btn createBtn">
+                        <button class="btn createBtn" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                           Create New
                         </button>
                         <input type="text" placeholder="Search">
                       </div>
+
+                      <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                        </div>
+                      </div>
+
                       <!-- Table  -->
                       <table class="table table-responsive-md table-responsive-sm ">
                           <thead>
